<resources>
    <string name="app_name">SeniorStepsFirebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="re_password">Re Password</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
